# rs-todo

./: Cargo.toml  README.md
data/: tasks.json
src/: data.rs  main.rs
src/task/: commands.rs  mod.rs  todo.rs
src/util/: cli.rs  io.rs  mod.rs
