[package]
name = "rs-todo"
version = "0.1.0"
authors = ["Surya Teja K <shanmukhateja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0.123"
serde_derive="1.0.123"
serde_json="1.0.61"
rand="0.8.3"